# AxumSessionAuth

./: CHANGELOG.md  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/NoPoolType/: Cargo.toml
examples/NoPoolType/src/: main.rs
examples/sqlx-example/: Cargo.toml
examples/sqlx-example/src/: main.rs
examples/surrealdb/: Cargo.toml
examples/surrealdb/src/: main.rs
src/: add_extension.rs  auth.rs  cache.rs  config.rs  future.rs  layer.rs  lib.rs  manager.rs  service.rs  session.rs  storage.rs  user.rs
