[workspace]
resolver="2"
members = [
    ".",
    "examples/sqlx-example/",
    "examples/NoPoolType/",
    "examples/surrealdb/",
]

[package]
name = "axum_session_auth"
version = "0.16.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide a User Authentication and privilege Token Checks. It requires the Axum_Session library."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session_auth"
keywords = ["Axum", "Tower", "SQLx", "Session", "Authentication"]
repository = "https://github.com/AscendingCreations/AxumSessionAuth"

[features]
key-store = ["axum_session/key-store"]
rest_mode = ["axum_session/rest_mode"]
advanced = ["axum_session/advanced"]

[dependencies]
axum-core = "0.5.2"
async-trait = "0.1.89"
anyhow = "1.0.100"
async-recursion = "1.1.1"
http = "1.3.1"
tower-layer = "0.3.3"
tower-service = "0.3.3"
futures = "0.3.31"
bytes = "1.10.1"
http-body = "1.0.1"
dashmap = "6.1.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.227"
tracing = "0.1.41"

[dependencies.axum_session]
#path = "C:/Sources/AxumSession"
#git = "https://github.com/AscendingCreations/AxumSessions.git"
#branch = "axum0.6"
version = "0.17.0"

[package.metadata.docs.rs]
features = ["advanced"]
rustdoc-args = ["--document-private-items"]
