[package]
name = "nopool"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.7.1"}
tokio = { version = "1.29.1", features = ["full", "tracing"] }
async-trait = "0.1.71"
sqlx = { version = "0.7.0", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
anyhow = "1.0.71"
serde = "1.0.167"

[dependencies.axum_session]
version = "0.13.0"
features = ["sqlite-rustls"]

[dependencies.axum_session_auth]
path = "../../"
features = ["sqlite-rustls"]