[package]
name = "nopool"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.8.4"}
tokio = { version = "1.47.1", features = ["full", "tracing"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
anyhow = "1.0.100"
serde = "1.0.227"
axum_session_sqlx = {version = "0.5.1", features = ["sqlite"]}

[dependencies.axum_session]
version = "0.17.0"

[dependencies.axum_session_auth]
path = "../../"