[package]
name = "surreal-example"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.8.1"}
tokio = { version = "1.40.0", features = ["full", "tracing"] }
async-trait = "0.1.71"
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
anyhow = "1.0.71"
serde = "1.0.167"
axum_session_surreal = "0.3.0"

[dependencies.axum_session]
version = "0.15.0"

[dependencies.axum_session_auth]
path = "../../"